Added functionality according to API

--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -2,44 +2,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Books</title>
+    <title>Authors</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/booksstyles.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/authorsstyles.css">
 </head>
 <body>
 
 <div class="container">
-    <h1 class="mt-5">Books</h1>
-    <a th:href="@{/book/create}" class="btn btn-primary mb-3">Create book</a>
+    <h1 class="mt-5">Authors</h1>
+    <a th:href="@{/author/create}" class="btn btn-primary mb-3">Create Author</a>
     <table class="table">
         <thead>
         <tr>
             <th>ID</th>
-            <th>Title</th>
-            <th>Author</th>
-            <th>Price</th>
+            <th>Name</th>
+            <th>Biography</th>
+            <th>Activity Years</th>
             <th>Details</th>
             <th>Update</th>
             <th>Delete</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="book : ${books}">
-            <td th:text="${book.id}"></td>
-            <td th:text="${book.title}"></td>
-            <td th:text="${book.author.firstName + ' ' + book.author.lastName}"></td>
-            <td th:text="${book.price}"></td>
-            <td><a th:href="@{/book(id=${book.id})}" class="btn btn-info">Details</a></td>
-            <td><a th:href="@{/book/update(id=${book.id})}" class="btn btn-warning">Update</a></td>
+        <tr th:each="author : ${authors}">
+            <td th:text="${author.id}"></td>
+            <td th:text="${author.firstName + ' ' + author.lastName}"></td>
+            <td th:text="${author.biography}"></td>
+            <td th:text="${author.activityYears}"></td>
+            <td><a th:href="@{/author(id=${author.id})}" class="btn btn-info">Details</a></td>
+            <td><a th:href="@{/author/update(id=${author.id})}" class="btn btn-warning">Update</a></td>
             <td>
                 <!-- Button trigger modal -->
-                <button type="button" class="btn btn-danger" data-toggle="modal" th:data-target="'#deleteModal' + ${book.id}">
+                <button type="button" class="btn btn-danger" data-toggle="modal" th:data-target="'#deleteModal' + ${author.id}">
                     Delete
                 </button>
 
                 <!-- Modal -->
-                <div class="modal fade" th:id="'deleteModal' + ${book.id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal fade" th:id="'deleteModal' + ${author.id}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -49,12 +49,12 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                Are you sure you want to delete this book?
+                                Are you sure you want to delete this author?
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <form th:action="@{/book/delete}" method="post" th:object="${deletebookobj}">
-                                    <input type="hidden" name="id" th:value="${book.id}" />
+                                <form th:action="@{/author/delete}" method="post" th:object="${deleteauthorobj}">
+                                    <input type="hidden" name="id" th:value="${author.id}" />
                                     <button type="submit" class="btn btn-danger">Delete</button>
                                 </form>
                             </div>
@@ -67,7 +67,7 @@
     </table>
 </div>
 
-<!-- Bootstrap JS -->
+<!-- Bootstrap JS (optional, only if needed) -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
