--- a/src/main/resources/templates/homeauthenticated.html
+++ b/src/main/resources/templates/homeauthenticated.html
@@ -41,15 +41,22 @@
 
 <div class="container">
     <h1>Welcome to Our Bookshop</h1>
-<!--    <div th:if="${#authorization.expression('isAuthenticated()')}">-->
-<!--        <p>User is authenticated</p>-->
-<!--        <p>Welcome, <span th:text="${#authentication.principal.username}"></span></p>-->
-<!--        <p>User roles: <span th:text="${#authentication.authorities}"></span></p>-->
-<!--        &lt;!&ndash; Add authenticated user-specific content here &ndash;&gt;-->
-<!--        <a th:href="@{/logout}">Logout</a>-->
-<!--    </div>-->
+    <!--    <div th:if="${#authorization.expression('isAuthenticated()')}">-->
+    <!--        <p>User is authenticated</p>-->
+    <!--        <p>Welcome, <span th:text="${#authentication.principal.username}"></span></p>-->
+    <!--        <p>User roles: <span th:text="${#authentication.authorities}"></span></p>-->
+    <!--        &lt;!&ndash; Add authenticated user-specific content here &ndash;&gt;-->
+    <!--        <a th:href="@{/logout}">Logout</a>-->
+    <!--    </div>-->
 
-    <a th:href="@{/signin}">Sign In</a>
+    <!--    <div th:unless="${#authorization.expression('isAuthenticated()')}">-->
+    <!--        <p>User is not authenticated</p>-->
+    <!--        &lt;!&ndash; Add content for unauthenticated users here &ndash;&gt;-->
+    <!--        <a th:href="@{/signin}">Sign In</a>-->
+    <!--        <a th:href="@{/register}">Register</a>-->
+    <!--    </div>-->
+
+    <a th:href="@{/exit}">Log out</a>-->
 
     <div class="row">
         <div class="col-md-6">
