--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Books</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/styles.css">
 </head>
 <body>
 
 <h1>You have been logged out successfully</h1>
+<a th:href="@{/signin}">Sign in</a>
 </body>
 </html>
