--- a/src/main/resources/templates/updatebook.html
+++ b/src/main/resources/templates/updatebook.html
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <label for="publishYear">Publish Year:</label>
-            <input type="text" id="publishYear" name="publishYear" th:value="${b.publishYear}" class="form-control" required>
+            <input type="number" id="publishYear" name="publishYear" th:value="${b.publishYear}" class="form-control" required>
         </div>
         <div class="form-group">
             <label for="genre">Genre:</label>
@@ -40,7 +40,7 @@
         </div>
         <div class="form-group">
             <label for="price">Price:</label>
-            <input type="text" id="price" name="price" th:value="${b.price}" class="form-control" required>
+            <input type="number" id="price" name="price" th:value="${b.price}" class="form-control" step="0.01" required>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
